[package]
name = "naivechain-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
actix = "0.13.5"
actix-web-actors = "4.3.0"
tokio = { version = "1.39.2", features = ["full"] }
serde_json = "1.0.121"
log = "0.4.22"
simple_logger = "5.0.0"
clap = { version = "4.5.11", features = ["derive"] }
awc = "3.5.0"
libp2p = { version = "0.53.2", features = ["full"] }
